--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: #222222;
   color: #EAEAEA;
@@ -90,7 +94,7 @@ nav {
   display: inline;
 }
 
-section {
+section, hr {
   clear: right;
 }
 
@@ -122,4 +126,9 @@ code {
 
 img {
   vertical-align: middle;
+  border-radius: 5px;
+}
+
+p > img {
+  margin: 10px;
 }
