--- a/index.css
+++ b/index.css
@@ -10,6 +10,36 @@ body {
 
 h1 {
   text-align: center;
+  margin-bottom: 20px;
+  font-size: 2.5em;
+}
+
+h2 {
+  margin-bottom: 15px;
+  font-size: 2em;
+}
+
+h3{
+  margin-bottom: 10px;
+  font-size: 1.5em;
+}
+
+/* #content > section > section:first-of-type h3 {
+  margin-top: 70px;
+} */
+
+h4 {
+  margin-bottom: 5px;
+  font-size: 1.2em;
+}
+
+h5 {
+  font-size: 1em;
+}
+
+p {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 /*Indentation des sections*/
@@ -29,6 +59,10 @@ section {
 
 a {
   color: #ffa500;
+}
+
+strong {
+  text-decoration: underline;
 }
 
 #mainDiv {
@@ -131,4 +165,21 @@ img {
 
 p > img {
   margin: 10px;
+}
+
+pre {
+  padding: 16px;
+  overflow: auto;
+  font-size: 85%;
+  line-height: 1.45;
+  background-color: #1f1f21;
+  border-radius: 3px;
+  margin-top: 0;
+  margin-bottom: 16px;
+  font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,monospace;
+  margin-bottom: 35px;
+}
+
+table {
+  margin: auto;
 }
